--- a/_config.yml
+++ b/_config.yml
@@ -12,14 +12,14 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    :  "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Habit Wallpapers for your phone"
+title                    : "Habit Wallpaper"
 title_separator          : "-"
-subtitle                 : "Habit reminders"
-name                     : "Ben Francom"
+subtitle                 : # "Habit reminders"
+name                     : "Eismgard, LLC"
 description              : "A site dedicated to habit creation"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -102,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ben Francom"
+  name             : "Eismgard, LLC"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Innovator, entrepreneur"
   location         : "Utah, USA"
@@ -110,7 +110,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:ben@habitwallpaper.com"
+      url: "mailto:habitwallpaper@habitwallpaper.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
