--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    :  "default" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Habit Wallpaper"
+title                    : "HabituWall"
 title_separator          : "-"
-subtitle                 : # "Habit reminders"
+subtitle                 : "Mobile wallpaper to help create and keep good habits"
 name                     : "Eismgard, LLC"
 description              : "A site dedicated to habit creation"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
