ben infra automation

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:habitwallpaper@habitwallpaper.com"
+      url: "mailto:support@habituwall.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -132,7 +132,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: https://twitter.com/habitwallpaper
+      url: https://twitter.com/habituwall
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
