added new images, pray scriptures, etc

--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ footer:
       # url:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: https://instagram.com/habitwallpaper
+      url: https://instagram.com/habituwall
 
 
 # Reading Files
